--- a/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
@@ -214,3 +214,4 @@ ymca_retention.ymca_winners.draw_winners:
     _title: 'Draw winners'
   requirements:
     _permission: 'administer retention campaign'
+    _csrf_token: 'TRUE'
